@@ -5,6 +5,15 @@
 <body>
 <h1>What's new</h1>
 
+<h2>Version 1.0 (2008-06-17)</h2>
+<ul>
+	<li class="level2"><div class="li">Fixed native MIDI Port connection bug under windows</div></li>
+	<li class="level2"><div class="li">Fixed mute/solo mixer bug</div></li>
+	<li class="level2"><div class="li">﻿Fixed copy/paste measure beetween tracks with different strings count</div></li>
+	<li class="level2"><div class="li">Fixed other minor bugs</div></li>
+	<li class="level2"><div class="li">Vietnamese translation</div></li>
+</ul>
+
 <h2>Version 1.0-rc4 (2008-05-05)</h2>
 <ul>
 	<li class="level2"><div class="li">Bugs Fixed</div></li>
